# Shijiu-assignment-3

./: README.md
Piece 3/: CMakeLists.txt  main.cpp
